--- a/app/Resources/views/iframe.html.twig
+++ b/app/Resources/views/iframe.html.twig
@@ -10,8 +10,8 @@ Event Control
                 {% if iframe_username %}
                     <script type="text/javascript">
                         $(document).ready(function() {
-                                $('#email_address).html({{ iframe_username }});
-                                $('#password).html({{ iframe_password }});
+                                $('#email_address').html({{ iframe_username }});
+                                $('#password').html({{ iframe_password }});
                         }
                     </script>
                 {% endif %}
