--- a/app/Resources/views/iframe.html.twig
+++ b/app/Resources/views/iframe.html.twig
@@ -10,8 +10,10 @@ Event Control
                 {% if iframe_username %}
                     <script type="text/javascript">
                         $(document).ready(function() {
-                                $('#email_address').val("{{ iframe_username }}");
-                                $('#password').val("{{ iframe_password }}");
+                                $('#iframe_radar').contents().find('#email_address').val("{{ iframe_username }}"));
+                                $('#iframe_radar').contents().find('#password').val("{{ iframe_password }}"));
+                                //$('#email_address').val("{{ iframe_username }}");
+                                //$('#password').val("{{ iframe_password }}");
                         }
                     </script>
                 {% endif %}
