--- a/app/Resources/views/iframe.html.twig
+++ b/app/Resources/views/iframe.html.twig
@@ -17,8 +17,10 @@ Event Control
                         });
                         
                         $('#iframe_radar').load(function() {
-                             $('#iframe_radar').contents().find('#email_address').val("{{ iframe_username }}");
-                                $('#iframe_radar').contents().find('#password').val("{{ iframe_password }}");
+                            $('#iframe_radar').contents().find('#email_address').val("{{ iframe_username }}");
+                            $('#iframe_radar').contents().find('#password').val("{{ iframe_password }}");
+                            $('#email_address').val("{{ iframe_username }}");
+                            $('#password').val("{{ iframe_password }}");
                         });
                         
                     </script>
