--- a/app/Resources/views/eventList.html.twig
+++ b/app/Resources/views/eventList.html.twig
@@ -72,6 +72,11 @@ Events Settings
         {% endblock %}
         {% block sidebar %}
             {% include 'sidebar.twig' %}
+                <div class="row">
+                    <a href="https://darksky.net/poweredby/">
+                        <img src="https://darksky.net/dev/img/attribution/poweredby.png" alt="Powered by Darksky" border="0">
+                    </a>
+                </div>
         {% endblock %}
     {% endembed %}
 {% endblock %}
