--- a/app/Resources/views/eventList.html.twig
+++ b/app/Resources/views/eventList.html.twig
@@ -74,7 +74,7 @@ Events Settings
             {% include 'sidebar.twig' %}
                 <div class="row">
                     <a href="https://darksky.net/poweredby/">
-                        <img src="https://darksky.net/dev/img/attribution/poweredby.png" alt="Powered by Darksky" class="img-responsive" border="0">
+                        <img src="https://darksky.net/dev/img/attribution/poweredby.png" alt="Powered by Dark Sky" class="img-responsive" border="0">
                     </a>
                 </div>
         {% endblock %}
