--- a/app/Resources/views/eventList.html.twig
+++ b/app/Resources/views/eventList.html.twig
@@ -72,6 +72,7 @@ Events Settings
         {% endblock %}
         {% block sidebar %}
             {% include 'sidebar.twig' %}
+            {% include 'darksky.html.twig' %}
                 <div class="row">
                     <a href="https://darksky.net/poweredby/">
                         <img src="https://darksky.net/dev/img/attribution/poweredby.png" alt="Powered by Dark Sky" class="img-responsive" border="0">
