--- a/app/Resources/views/userUpdate.html.twig
+++ b/app/Resources/views/userUpdate.html.twig
@@ -78,6 +78,7 @@ Control Room Update User Details
         {% endblock %}
         {% block sidebar %}
             {% include 'sidebar.twig' %}
+            {% include 'darksky.html.twig' %}
         {% endblock %}
     {% endembed %}
 {% endblock %}              
