--- a/app/Resources/views/userList.html.twig
+++ b/app/Resources/views/userList.html.twig
@@ -47,6 +47,7 @@ Control Room Users
         {% endblock %}
         {% block sidebar %}
             {% include 'sidebar.twig' %}
+            {% include 'darksky.html.twig' %}
         {% endblock %}
     {% endembed %}
 {% endblock %}
