--- a/app/Resources/views/iframe.html.twig
+++ b/app/Resources/views/iframe.html.twig
@@ -5,11 +5,15 @@ Event Control
 {% block layout %}
     {% embed '3-9.html.twig' %}
         {% block content %}
-        {% if full_view %}
-        target="_blank"
+        {% if target %}
+           <a href="{{ target }}" target="blank" >
+        {% endif %}
             {% if iframe %}
                 {{ iframe|raw }}
             {% endif %}
+        {% if target %}
+            </a>
+        {% endif %}
             {% if data %}
                 {{ data }}
             {% endif %}
