Open logs shortcut added and file controller fixed

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -330,6 +330,10 @@
                        e.preventDefault();
                        window.location.href = "{{ path('new_entry') }}";
                 });
+                Mousetrap.bind('ctrl+o', function(e) {
+                       e.preventDefault();
+                       window.location.href = "{{ path('sort_filter_log', {'sort': "desc", 'filter': "open"}) }}";
+                });
             });
         {% endif %}
     </script>
