--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -33,7 +33,7 @@
         </div>
     </a>
     <a href="{{ path('sort_filter_log', {'sort': "desc", 'filter': "open"}) }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
-        <div class="row">
+        <div class="row" data-toggle="tooltip" data-placement="right" title="ctrl-o">
             <div class="col-md-12 col-xs-12">
                 Latest Open <span class="badge" id="logTotal-Open">{{ activeOpenLogs(app.user.id) }}</span>
             </div>
