Modified sidebar lighting controller to only be visible if user is part of an active event

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -155,24 +155,26 @@
     </div>
     </a>
 {% if is_granted('ROLE_USER') %}
-    <div class="row">
-            <h4>Control Room Functions</h4>
-    </div>
-    <div id="LEDBtn1" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+    {% if activeEventId(app.user.id) != 0 %}
         <div class="row">
-            Full Working Light
+                <h4>Control Room Functions</h4>
         </div>
-    </div>
-    <div id="LEDBtn2" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
-        <div class="row">
-            Control Mode Working Light
+        <div id="LEDBtn1" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+            <div class="row">
+                Full Working Light
+            </div>
         </div>
-    </div>
-    <div id="LEDBtn3" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
-        <div class="row">
-            Lighting Off
+        <div id="LEDBtn2" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+            <div class="row">
+                Control Mode Working Light
+            </div>
         </div>
-    </div>
+        <div id="LEDBtn3" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+            <div class="row">
+                Lighting Off
+            </div>
+        </div>
+    {% endif %}
 {% endif %}
 <br>
 <script type="text/javascript">
