--- a/app/Resources/views/logTable2.html.twig
+++ b/app/Resources/views/logTable2.html.twig
@@ -14,7 +14,11 @@
             </thead>
             <tbody>
                 {% for log in logs %}
-                    <tr>
+                    {% if log.park_alert and log.log_update_timestamp < date('-2minutes') %}
+                        <tr class="row_flash">
+                    {% else %}
+                        <tr>
+                    {% endif %}
                         <td>
                             {% if log.log_update_timestamp is not null %}
                                 <div data-toggle="tooltip" data-placement="left" title="Updated: {{ log.log_update_timestamp|date('Y-m-d H:i:s', "Europe/London") }}">
