Added row flash css

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -107,6 +107,13 @@
     -moz-animation:    argh-my-eyes 1s infinite;
     animation:         argh-my-eyes 1s infinite;
 }
+
+.row_flash {
+    -webkit-animation: argh-my-eyes 1s infinite;
+    -moz-animation:    argh-my-eyes 1s infinite;
+    animation:         argh-my-eyes 1s infinite;
+}
+
 </style>
 {% endblock %}
 
