--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -48,18 +48,25 @@ Control Room Log Edit
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-6">  
+                                <div class="col-md-5">  
                                     <div class="form-group">
                                     {{ form_label(log_entry.location) }}
                                     {{ form_errors(log_entry.location) }}
                                     {{ form_widget(log_entry.location) }}
                                     </div>
                                 </div>
-                                <div class="col-md-6">  
+                                <div class="col-md-5">  
                                     <div class="form-group">
                                         {{ form_label(log_entry.reported_by) }}
                                         {{ form_errors(log_entry.reported_by) }}
                                         {{ form_widget(log_entry.reported_by) }}
+                                    </div>
+                                </div>
+                                <div class="col-md-2">  
+                                    <div class="form-group">
+                                        {{ form_label(log_entry.park_alert) }}
+                                        {{ form_errors(log_entry.park_alert) }}
+                                        {{ form_widget(log_entry.park_alert) }}
                                     </div>
                                 </div>
                             </div>
