updated flash cs

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -123,10 +123,9 @@
 }
 
 @keyframes row_flash {
-  from { background-color: inherit; }
-  to { background-color: #f0ad4e; }
-  from { background-color: #f0ad4e; }
-  to { background-color: inherit; }
+    0%   { background-color: inherit; }
+    50% { background-color: #f0ad4e; }
+    100% { background-color: inherit; }
 }
 
 .row_flash {
