modified form twig

--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -69,7 +69,7 @@ Control Room Log New Entry
                                     </div>
                                 </div>
                                 <div class="col-md-2">  
-                                    <div class="form-group">
+                                    <div class="form-group form-check">
                                         {{ form_label(log_entry.park_alert) }}
                                         {{ form_errors(log_entry.park_alert) }}
                                         {{ form_widget(log_entry.park_alert) }}
