--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -70,7 +70,8 @@ Control Room Log New Entry
                                 </div>
                                 <div class="col-md-2">  
                                     <div class="form-group">
-                                        {{ form_widget(log_entry.park_alert) }} {{ form_label(log_entry.park_alert) }}
+                                        {{ form_label(log_entry.park_alert) }}
+                                        {{ form_widget(log_entry.park_alert) }} 
                                         {{ form_errors(log_entry.park_alert) }}
                                         
                                     </div>
