Added location data to sidebar

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -10,6 +10,8 @@
             <a href="{{ path('event_weather_radar') }}">
                 <p id="SidebarWeather"><strong>Weather:</strong> {{ activeEventWeather(app.user.id) }}</p>
             </a>
+            <br>
+                <p id="Location"><strong>Location:</strong> Updating... </p>
     </div>
 </div>
 <div class="row">
@@ -289,6 +291,25 @@
                     }
                 }
             });
+        });
+    }
+    
+    function userLocate() {
+        var options = {
+            enableHighAccuracy: true,
+            timeout: 5000,
+            maximumWait: 1000,     // max wait time for desired accuracy
+            maximumAge: 0,          // disable cache
+            desiredAccuracy: 5,    // meters
+            fallbackToIP: true,     // fallback to IP if Geolocation fails or rejected
+            addressLookup: false,    // requires Google API key if true
+            timezone: false,         // requires Google API key if true
+        };
+        
+        geolocator.locate(options, function (err, location) {
+            if (err) return console.log(err);
+            console.log(location);
+            $('#Location').html("<strong>Location:</strong> "+location.result.coords.latitude+","+location.result.coords.longitude);
         });
     }
         
