--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -205,6 +205,7 @@
     function sidebarPoll()
     {
         UPSUpdate();
+        userLocate();
         //PeopleCounterUpdate();
     
         {% if activeEventId(app.user.id) != 0 %}
