modified side bar layout

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -10,8 +10,7 @@
             <a href="{{ path('event_weather_radar') }}">
                 <div id="SidebarWeather"><strong>Weather:</strong> {{ activeEventWeather(app.user.id) }}</div>
             </a>
-            <br>
-            <a class="locationURL" href="#">
+            <a class="locationURL" href="#" target="_blank">
                 <div id="Location"><strong>Location:</strong> Updating... </div>
             </a>
     </div>
