debugging long and lat

--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -39,6 +39,7 @@ Control Room Log Edit
                                 </div>
                             </div>
                             <div class="row">
+                                {{ entry.longitude }}
                                 {% if entry.longitude or entry.latitude is null %}
                                     <div class="col-md-12">  
                                         <div class="form-group">
