--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -60,7 +60,7 @@ Control Room Log Edit
                                             width="250"
                                             height="250"
                                             frameborder="0" style="border:0"
-                                            src="https://www.google.com/maps/embed/v1/search?key=AIzaSyBCpMw_PcJRHplbVUskg0ltvmsCWxFyUPU&q={{ entry.latitude }},{{ entry.longitude }}&z=20" >
+                                            src="https://www.google.com/maps/embed/v1/search?key=AIzaSyBCpMw_PcJRHplbVUskg0ltvmsCWxFyUPU&q={{ entry.latitude }},{{ entry.longitude }}&zoom=20" >
                                         </iframe>
                                     </div>
                                 {% endif %}
