--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -56,12 +56,7 @@ Control Room Log Edit
                                         </div>
                                     </div>
                                     <div class="col-md-3">
-                                        <iframe
-                                            width="250"
-                                            height="250"
-                                            frameborder="0" style="border:0"
-                                            src="https://www.google.com/maps/embed/v1/search?key=AIzaSyBCpMw_PcJRHplbVUskg0ltvmsCWxFyUPU&q={{ entry.latitude }},{{ entry.longitude }}&zoom=20" >
-                                        </iframe>
+                                        <img width="250" src="http://maps.googleapis.com/maps/api/staticmap?markers=color:blue%7Clabel:S%7C{{ entry.latitude }},{{ entry.longitude }}&scale=false&size=250x250&maptype=roadmap&format=png&visual_refresh=true&zoom=19&key=AIzaSyBCpMw_PcJRHplbVUskg0ltvmsCWxFyUPU" alt="Google Map of Entry">
                                     </div>
                                 {% endif %}
                             </div>
