--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -56,7 +56,7 @@ Control Room Log Edit
                                         </div>
                                     </div>
                                     <div class="col-md-3">
-                                        <img width="250" src="http://maps.googleapis.com/maps/api/staticmap?markers=color:blue%7Clabel:Incident%7C{{ entry.latitude }},{{ entry.longitude }}&scale=false&size=250x250&maptype=roadmap&format=png&visual_refresh=true&zoom=18&key=AIzaSyBCpMw_PcJRHplbVUskg0ltvmsCWxFyUPU" alt="Google Map of Entry">
+                                        <img width="250" src="http://maps.googleapis.com/maps/api/staticmap?markers=color:blue%7Clabel:%7C{{ entry.latitude }},{{ entry.longitude }}&scale=false&size=250x250&maptype=roadmap&format=png&visual_refresh=true&zoom=18&key=AIzaSyBCpMw_PcJRHplbVUskg0ltvmsCWxFyUPU" alt="Google Map of Entry">
                                     </div>
                                 {% endif %}
                             </div>
