--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -118,12 +118,14 @@ Event Entry Form
                                 </div>
                             </div>
                         </div><br>
-                        <div class="row">  
-                            <div class="col-md-8">
-                                {{ form_end(form) }}
-                                <button type="button" id="delete_button" class="btn btn-warning btn-block" onClick="location.href='{{ path('delete_event', {'deleteId': event.id}) }}'">Delete Event</button>
+                        {% if event_id %}
+                            <div class="row">  
+                                <div class="col-md-8">
+                                    {{ form_end(form) }}
+                                    <button type="button" id="delete_button" class="btn btn-warning btn-block" onClick="location.href='{{ path('delete_event', {'deleteId': event_id}) }}'">Delete Event</button>
+                                </div>
                             </div>
-                        </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
