--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -118,6 +118,8 @@ Event Entry Form
                                 </div>
                             </div>
                         </div><br>
+                        {{ event_id }}
+                        {{ event.id }}
                         {% if event_id is defined %}
                             <div class="row">  
                                 <div class="col-md-8">
