--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -118,9 +118,7 @@ Event Entry Form
                                 </div>
                             </div>
                         </div><br>
-                        
-                        {{ event.id }}
-                        {% if event_id is defined %}
+                        {% if event.id is defined %}
                             <div class="row">  
                                 <div class="col-md-8">
                                     <button type="button" id="delete_button" class="btn btn-warning btn-block" onClick="location.href='{{ path('delete_event', {'deleteId': event_id}) }}'">Delete Event</button>
