fix for location in sidebar

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -11,7 +11,7 @@
                 <div id="SidebarWeather"><strong>Weather:</strong> {{ activeEventWeather(app.user.id) }}</div>
             </a>
             <a class="locationURL" href="#" target="_blank">
-                <div id="Location"><strong>Location:</strong> Updating... </div>
+                <div id="Location"><strong>Location:</strong><br>Updating... </div>
             </a>
     </div>
 </div>
