--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -210,7 +210,7 @@
     {
         UPSUpdate();
         //userLocate();
-        //PeopleCounterUpdate();
+        PeopleCounterUpdate();
     
         {% if activeEventId(app.user.id) != 0 %}
             $.getJSON('{{ path('log_json_data') }}', function(data) {
