--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -174,6 +174,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script>
     <script type="text/javascript" src="{{ asset('assets/vendor/easy-autocomplete/jquery.easy-autocomplete.min.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/geolocator/2.1.0/geolocator.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCpMw_PcJRHplbVUskg0ltvmsCWxFyUPU"></script>
     <script type="text/javascript">
     
         var alertData = null;
