debugging incident map

--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -349,10 +349,10 @@ Control Room Log Edit
 
                 overlay = new EventSiteOverlay(bounds, srcImage, map);
 
-                var marker = new google.maps.Marker({
-                    position: {lat:{{ entry.latitude }}, lng:{{ entry.longitude }}},
-                    map: map
-                  });
+                //var marker = new google.maps.Marker({
+                //    position: {lat:{{ entry.latitude }}, lng:{{ entry.longitude }}},
+                //    map: map
+                //  });
             }
 
             /** @constructor */
