debugging gmaps api

--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -427,7 +427,7 @@ Control Room Log Edit
                 this.div_ = null;
             };
 
-            google.maps.event.addDomListener(window, 'load', initMap);
+            google.maps.event.addDomListener(window, "load", initMap);
         {% endif %}
     </script>        
 {% endblock %}
