--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -111,7 +111,7 @@ Control Room Log Edit
                                         </div>
                                         <div class="col-md-4">
                                             <br>
-                                            <div id="map">
+                                            <div id="logMap">
                                                 <img width="350" src="https://maps.googleapis.com/maps/api/staticmap?markers=color:blue%7Clabel:%7C{{ entry.latitude }},{{ entry.longitude }}&scale=false&size=350x250&maptype=roadmap&format=png&visual_refresh=true&zoom=18&key=AIzaSyBCpMw_PcJRHplbVUskg0ltvmsCWxFyUPU" alt="Google Map of Entry">
                                             </div>                                            
                                         </div>
@@ -334,7 +334,7 @@ Control Room Log Edit
             // Initialize the map and the custom overlay.
 
             function initMap() {
-                var map = new google.maps.Map(document.getElementById('map'), {
+                var map = new google.maps.Map(document.getElementById('logMap'), {
                     zoom: 17,
                     center: {lat: 51.379300, lng: -2.32700},
                     mapTypeId: 'satellite'
